sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/Maintenance_Service_Items__c.object-meta.xml
<CustomObject>
    <description>Object to hold asset maintenance  p.o items</description>
    <label>Maintenance Service Item</label>
    <nameField>
        <displayFormat>SI-{0000000}</displayFormat>
        <label>Maintenance Service Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>