sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Asset_Maintenance_Task__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maintenance_Task__c</fullName>
    <description>Lookup to Asset Maintenance task</description>
    <label>Asset Maintenance Task</label>
    <referenceTo>Asset_Maintenance_Task__c</referenceTo>
    <relationshipLabel>Maintenance Service Items</relationshipLabel>
    <relationshipName>Maintenance_Service_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>