sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Asset_Service_Item__c.field-meta.xml
<CustomField>
    <fullName>Asset_Service_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Service Item</label>
    <referenceTo>Asset_Service_Item__c</referenceTo>
    <relationshipLabel>Maintenance Service Items</relationshipLabel>
    <relationshipName>Maintenance_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>