sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Maintenance Service Items</relationshipLabel>
    <relationshipName>Maintenance_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>