sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>Purchase_Order_Item__r.Item_Description__c</formula>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>