sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Item</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Maintenance Service Items</relationshipLabel>
    <relationshipName>Maintenance_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>