sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>RecordType</label>
    <length>60</length>
    <type>Text</type>
</CustomField>