sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Unit_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Item_Cost__c</fullName>
    <label>Unit Item Cost</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>