sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Uom_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Uom_Conversion_Factor__c</fullName>
    <formula>Purchase_Order_Item__r.UOM_Conversion_Factor__c</formula>
    <label>Uom Conversion Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>