sfSandBoxCode/force-app/main/default/objects/Maintenance_Service_Items__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Maintenance Service Items</relationshipLabel>
    <relationshipName>Maintenance_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>